# meridian-studio

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  docker-compose.yml
.kiro/specs/web-visual-graph-builder/: design.md  requirements.md  tasks.md
backend/: Dockerfile  pyproject.toml
backend/app/: __init__.py  auth.py  graphs.py  main.py  models.py  sharing.py  users.py  validation.py
frontend/: .env.example  .env.local  .npmrc  Dockerfile  deno.jsonc  index.html  package.json  tsconfig.json  vite.config.mjs
frontend/src/: main.tsx
frontend/src/components/ui/: button.tsx  input.tsx
frontend/src/lib/: api.ts
frontend/src/modules/: App.tsx  Auth.tsx  Dashboard.tsx  Graphs.tsx  SignUp.tsx
frontend/src/modules/auth/: AuthProvider.tsx  ProtectedRoute.tsx
frontend/src/styles/: index.css
supabase/: seed.sql
supabase/migrations/: 0001_init.sql  0002_rls.sql  0003_rls_insert.sql
