[project]
name = "meridian-studio-backend"
version = "0.1.0"
description = "FastAPI backend for Meridian Studio"
authors = [{ name = "Meridian Studio" }]
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.112",
  "pydantic>=2.7",
  "uvicorn[standard]>=0.30",
  "sqlalchemy>=2.0",
  "alembic>=1.13",
  "python-dotenv>=1.0",
  "psycopg2-binary>=2.9",
  "redis>=5.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "httpx>=0.27",
  "pytest-asyncio>=0.23"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["app"]
include = ["app*"]


